Bug 1304641 - TraceLogger: Also throw compartment mismatch error when running in the jits, r=bbouvier